# pyball

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/: team_pitching_stats.html  utils.html
docs/pyball/: batting_stats.html  index.html  pitching_stats.html  savant.html  team_batting_stats.html  team_pitching_stats.html  utils.html
examples/: pyball_tutorial.html  pyball_tutorial.ipynb
html/pyball/: batting_stats.html  playerid_lookup.html  utils.html
pyball/: __init__.py  baseball_reference_player.py  baseball_reference_team.py  batting_stats.py  pitching_stats.py  playerid_lookup.py  savant.py  team_batting_stats.py  team_pitching_stats.py  utils.py
tests/: test_baseball_reference_player.py  test_baseball_reference_team.py  test_playerid_lookup.py  test_savant.py  test_utils.py
