[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyball"
version = "1.3.0"
description = "Python3 library for obtaining baseball information"
authors = ["gdifiore"]
readme = "README.md"
packages = [{include = "pyball"}]

[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^1.3.4"
numpy = "1.26.4"
bs4 = "^0.0.1"
requests = "^2.26.0"
playwright = "^1.45.0"
lxml = "^5.2.2"

[tool.poetry.scripts]
post-install = "pyball:post_install"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

#[[tool.poetry.source]]
#name = "pypi"
#url = "https://pypi.org/simple"