[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyball"
version = "1.4.2"
description = "Python3 library for obtaining baseball information"
authors = ["gdifiore"]
readme = "README.md"
packages = [{include = "pyball"}]

[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^1.3.4"
numpy = "1.26.4"
bs4 = "^0.0.1"
lxml = "^5.2.2"
diskcache = "^5.6.3"
requests = "^2.32.3"
selenium = "^4.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
mock = "^5.1.0"
